update chatbot code

--- a/assets/feature/requirements.txt
+++ b/assets/feature/requirements.txt
@@ -1,13 +1,14 @@
 streamlit
-torch
-transformers
 langchain-community
 langchain-huggingface
-langchain-experimental
+langchain-text-splitters
+langchain-openai
 langchain
 langchain-core
 faiss-cpu
 requests
 pypdf
-chromadb
+python-docx
+openpyxl
+unstructured[local-inference]
 sentence-transformers
