--- a/assets/feature/requirements.txt
+++ b/assets/feature/requirements.txt
@@ -2,7 +2,6 @@ streamlit
 langchain-community
 langchain-huggingface
 langchain-text-splitters
-langchain-openai
 langchain
 langchain-core
 faiss-cpu
@@ -12,3 +11,4 @@ python-docx
 openpyxl
 unstructured[local-inference]
 sentence-transformers
+openai
