update bảng tiếng việt cho chatbot

--- a/assets/feature/requirements.txt
+++ b/assets/feature/requirements.txt
@@ -1,15 +1,18 @@
-streamlit
-torch
-transformers
-langchain-community
-langchain-huggingface
-langchain-experimental
-langchain
-langchain-core
-faiss-cpu
-requests
-pypdf
-python-docx
-openpyxl
-unstructured[local-inference]
-sentence-transformers
+streamlit==1.28.0
+torch==2.0.1
+transformers==4.35.0
+langchain-community==0.0.13
+langchain-huggingface==0.0.1
+langchain-experimental==0.0.45
+langchain==0.1.0
+langchain-core==0.1.10
+langchain-text-splitters==0.0.1
+faiss-cpu==1.7.4
+requests==2.31.0
+pypdf==3.17.0
+python-docx==1.1.0
+openpyxl==3.1.2
+unstructured[local-inference]==0.11.6
+sentence-transformers==2.2.2
+numpy==1.24.3
+pandas==2.1.3
