--- a/assets/feature/requirements.txt
+++ b/assets/feature/requirements.txt
@@ -1,14 +1,11 @@
 streamlit
+torch
+transformers
+langchain
 langchain-community
 langchain-huggingface
 langchain-experimental
-langchain
-langchain-core
-langchain-text-splitters
 faiss-cpu
-requests
-pypdf
-python-docx
-openpyxl
-unstructured[local-inference]
 sentence-transformers
+pypdf
+requests
