--- a/assets/feature/requirements.txt
+++ b/assets/feature/requirements.txt
@@ -5,7 +5,11 @@ langchain
 langchain-community
 langchain-huggingface
 langchain-experimental
+langchain-text-splitters
 faiss-cpu
+python-docx
+unstructured[xlsx]
 sentence-transformers
 pypdf
 requests
+transformers
