update trang chatbot

--- a/public/feature/requirements.txt
+++ b/public/feature/requirements.txt
@@ -1,13 +1,15 @@
 streamlit
 torch
 transformers
+langchain
 langchain-community
 langchain-huggingface
 langchain-experimental
-langchain
-langchain-core
+langchain-text-splitters
 faiss-cpu
-requests
-pypdf
-chromadb
+python-docx
+unstructured[xlsx]
 sentence-transformers
+pypdf
+requests
+transformers
