--- a/assets/feature_spamdetector/requirements.txt
+++ b/assets/feature_spamdetector/requirements.txt
@@ -1,12 +1,19 @@
+# Core dependencies
 streamlit
-pandas
-numpy
-scikit-learn
 torch
 transformers
 faiss-cpu
-tqdm
+scikit-learn
+pandas
+numpy
+
+# Data processing and augmentation
 nltk
-kagglehub
+tqdm
+
+# Visualization
+plotly
+
+# File handling and utilities
 gdown
-requests
+kagglehub
