GUIDE to integrate run_enhanced_pipeline into spam_model.py to improve model embedding

--- a/assets/feature_spamdetector_test/requirements.txt
+++ b/assets/feature_spamdetector_test/requirements.txt
@@ -1,3 +1,26 @@
+# Streamlit app dependencies
+streamlit
+plotly
+
+# Model and data processing
+transformers
+scikit-learn
+tqdm
+pandas
+torch
+faiss-cpu
+
+# Data augmentation and NLP
+nltk
+
+# Miscellaneous
+kagglehub
+base64
+pickle
+os
+json
+datetime
+pathlib
 # Core dependencies
 streamlit
 torch
